2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/51_not_bool_aff_int.deca
// Description :
//     affécatation du  Not ! devant boolean dans int  
// Resultats :
//    Erreur Contexteulle : ligne 11 : l'opération Not ! devant string n'est pas valide
//
// Historique :
// cree le 10/01/2024

{
    int x ; 
    x = !true ;
}